--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/express-validator": "^3.0.0",
     "@types/node": "^12.12.12",
-    "@types/tcp-ping": "^0.1.0",
     "@types/yargs": "^15.0.4",
     "tsc-watch": "^4.0.0",
     "tslint": "^5.20.1",
@@ -27,12 +27,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "network": "^0.5.0",
     "redbird": "^0.9.1",
     "source-map-support": "^0.5.16",
-    "tcp-ping": "^0.1.1",
     "yargs": "^15.3.1"
   }
 }
